Bug 1201874 - create core text font with correct size. r=lsalzman, a=gchang

MozReview-Commit-ID: GXH7ExjMI2m